[package]
name = "demo2"
version = "0.1.0"
authors = ["zxk7516 <zxk7516@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-web-static-files = "0.3"

serde_json = "1.0"
frank_jwt = "3.1"

dotenv = "0.15"
# lazy_static = "1.4"

diesel = {version = "1.4", features = ["mysql","r2d2"]}
r2d2="0.8"

[build-dependencies]
actix-web-static-files = "0.3"

